show package of courier

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,13 +163,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/listView"
+        android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
-        android:text="Очистить"
-        android:backgroundTint="@color/orange" />
+        android:backgroundTint="@color/orange"
+        android:text="Очистить" />
+
+    <Button
+        android:id="@+id/button_show"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/listView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="@color/orange"
+        android:text="Заказы" />
 
     <Button
         android:id="@+id/button_ok"
@@ -177,10 +185,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/listView"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/orange"
         android:text="ОК" />
 
